# MiniprojectROS

hagen_bringup/: CMakeLists.txt  package.xml
hagen_bringup/launch/: multi_hagen_launch.py
hagen_control/: CMakeLists.txt  package.xml
hagen_control/scripts/: move_to_goal.py  move_to_goal_robot2.py
hagen_description/: CMakeLists.txt  package.xml
hagen_navigation/: CMakeLists.txt  package.xml
hagen_navigation/config/: slam_config.yaml
hagen_navigation/launch/: slam_robot1.launch.py  slam_robot2.launch.py
hagen_robot_diff_drive/: CMakeLists.txt  package.xml
hagen_robot_diff_drive/launch/: start_robot.launch.py
hagen_robot_diff_drive/models/hagen_robot_model/: hagen_robot_model.urdf
hagen_robot_diff_drive/scripts/: diff_drive_control.py  spawn_robot.py
