<package format="3">
  <name>hagen_bringup</name>
  <version>0.0.1</version>
  <description>Launch system for Hagen multi-robot setup</description>
  <maintainer email="p.belayev@innopolis.university">Petr</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
</package>