<package format="3">
  <name>hagen_control</name>
  <version>0.0.1</version>
  <description>Simple autonomous control for Hagen robot</description>
  <maintainer email="p.belayev@innopolis.university">Petr</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>